make latex; URLize links (most broken though)

--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -1,3 +1,13 @@
+\documentclass{article}
+\usepackage{fullpage}
+\usepackage{times}
+\usepackage{microtype}
+\usepackage[plainpages=false,debug]{hyperref} % should be last package
+
+\newcommand\elink[1]{\url{#1}}
+
+\begin{document}
+
 A.	GENERAL  PROGRAM REQUIREMENTS
 A1	REGISTRATION
 
@@ -27,8 +37,8 @@ The CRN for each term can be found in the Academic Timetable under the Oceanogra
 
 
 
-1 FGS Regulations, section 5.2.3 Failure to Register (http://dalgrad.dal.ca/regulations/v/ - 5.2.3).
-2 Academic Timetable (http://www.dal.ca/academics.academic_timetable.html).
+1 FGS Regulations, section 5.2.3 Failure to Register \elink{http://dalgrad.dal.ca/regulations/v5.2.3}.
+2 Academic Timetable \elink{http://www.dal.ca/academics.academic_timetable.html}.
  
 
 A2	COURSES
@@ -51,10 +61,10 @@ FGS Regulations5 stipulate that graduate students must achieve a grade of B- or 
 
 Upon Failure of any course (grade less than B-), a student will be withdrawn from the Graduate Program and must apply for re-admission. Such a student may apply, in writing, to the department for immediate reinstatement6. Reinstatement to a program after a failing grade must be supported by the Graduate Coordinator, and must be approved in writing by the Faculty of Graduate Studies. If
 
-3 Graduate Student Program Forms can be downloaded from the FGS website (http://dalgrad.dal.ca/currentstudents/forms).
-4 Course registration deadlines can be found in the Graduate Studies Academic Calendar (http://www.dal.ca/academics/academic_calendars.html).
-5 FGS Regulations, section 7.6 Classes and Grades (http://dalgrad.dal.ca/regulations/vii/ - 7.6).
-6 FGS Regulations, section 5.2.6 Readmission of Students (http://dalgrad.dal.ca/regulations/v/ - 5.2.6).
+3 Graduate Student Program Forms can be downloaded from the FGS website \elink{http://dalgrad.dal.ca/currentstudents/forms}.
+4 Course registration deadlines can be found in the Graduate Studies Academic Calendar \elink{http://www.dal.ca/academics/academic_calendars.html}.
+5 FGS Regulations, section 7.6 Classes and Grades \elink{http://dalgrad.dal.ca/regulations/vii/ - 7.6}.
+6 FGS Regulations, section 5.2.6 Readmission of Students \elink{http://dalgrad.dal.ca/regulations/v/ - 5.2.6}.
  
 
 readmitted, any subsequent 'F' will result in a final program dismissal. Any academic withdrawal and reinstatement will be recorded on the student's official transcript.
@@ -81,8 +91,8 @@ Students are required to attend the general departmental seminars and to attend,
 
 
 
-7 FGS Regulations, section 7.6.6 Letters of Permission (http://dalgrad.dal.ca/regulations/vii/ - 7.6.6).
-8 Letter of Permission Form and Guidelines (http://dalgrad.dal.ca/currentstudents/forms/ - lop).
+7 FGS Regulations, section 7.6.6 Letters of Permission \elink{http://dalgrad.dal.ca/regulations/vii/ - 7.6.6}.
+8 Letter of Permission Form and Guidelines \elink{http://dalgrad.dal.ca/currentstudents/forms/ - lop}.
  
 
 A6	CHANGE IN STATUS
@@ -109,8 +119,8 @@ The Thesis Advisory Committee must be formed within one month of the start of th
 The supervisor will select a provisional committee, in consultation with the student. A Graduate Student Program Form listing the Advisory Committee Members must be submitted to the Graduate Secretary.
 
 
-9 DalOnline (https://dalonline.dal.ca/).
-10 FGS Regulations, section 7.3 Maximum Time for Degree Completion and Extensions (http://dalgrad.dal.ca/regulations/vii/ - 7.3).
+9 DalOnline \elink{https://dalonline.dal.ca}.
+10 FGS Regulations, section 7.3 Maximum Time for Degree Completion and Extensions \elink{http://dalgrad.dal.ca/regulations/vii/ - 7.3}.
  
 
 Membership on an Advisory Committee is flexible and may change during the course of a student’s program. Students must complete a Graduate Student Program Update Form when a decision to make changes to committee membership is made. The Advisory Committee structure differs for MSc and PhD, as explained in sections B and C.
@@ -141,7 +151,7 @@ At several points in a student's program the approval of the advisory committee 
 •	Acceptance of a thesis proposal.
 •	Change of status, such as advancement to the PhD program.
 
-11 FGS Regulations, section 9.3 Supervisory Committees (http://dalgrad.dal.ca/regulations/ix/ - 9.3).
+11 FGS Regulations, section 9.3 Supervisory Committees \elink{http://dalgrad.dal.ca/regulations/ix/ - 9.3}.
  
 
 •	Approval to write up sections of a thesis.
@@ -230,7 +240,7 @@ Six Weeks Prior to Defence:
 -	Have a format review done by FGS before the thesis is distributed to your examining committee
 -	Submit an MSc Examination Information Form to the Graduate Secretary
 
-12 FGS Regulations, section 10.3 Master’s Theses (http://dalgrad.dal.ca/regulations/x/ - 10.3). 13 FGS Common Thesis Format Review Comments (http://dalgrad.dal.ca/currentstudents/thesesanddefences/formattingcomments/).
+12 FGS Regulations, section 10.3 Master’s Theses \elink{http://dalgrad.dal.ca/regulations/x/ - 10.3}. 13 FGS Common Thesis Format Review Comments \elink{http://dalgrad.dal.ca/currentstudents/thesesanddefences/formattingcomments/}.
  
 
 -	Submit a Thesis Binding Submission Form and payment to the Graduate Secretary
@@ -268,7 +278,7 @@ Request for transfer to the PhD program should be completed no later than one mo
 
 
 
-14 DalSpace (http://dalspace.library.dal.ca/).
+14 DalSpace \elink{http://dalspace.library.dal.ca/}.
  
 
 An MSc student may transfer to a PhD program without completing a MSc. Students wishing to transfer should provide a letter to their advisory committee stating the reason for the transfer, and justification that they are qualified for the PhD program. A one-page explanation is sufficient. The student’s Advisory Committee is required to meet, and the committee may recommend advancement to the PhD program. A letter from the supervisor, justifying the advancement of the student to the PhD program, should be submitted to the Graduate Coordinator along with the student’s letter no later than one month prior to the anniversary of the student’s admission date. The Graduate Oversight Committee will then review the request.
@@ -504,8 +514,8 @@ Dalhousie Graduate Fellowships will normally be provided for two years for an MS
 Scholarship support is provided directly to some students by the Natural Sciences and Engineering Research Council (NSERC), the Killam Foundation through Dalhousie, by companies, and by other agencies, both national and international. Students are encouraged to apply for external support whenever possible.
 
 
-15 DalSpace (http://dalspace.library.dal.ca/).
-16 PhD Candidate Thesis And Defence: Timeline & Checklist (http://dalgrad.dal.ca/currentstudents/thesesanddefences/checklists/).
+15 DalSpace \elink{http://dalspace.library.dal.ca/}.
+16 PhD Candidate Thesis And Defence: Timeline \& Checklist \elink{http://dalgrad.dal.ca/currentstudents/thesesanddefences/checklists/}.
  
 
 Full-time students without such special scholarship support are generally awarded Dalhousie Graduate Fellowships from funds that come partly to the Department from the University and mainly from individual faculty members’ research grants.
@@ -531,8 +541,8 @@ Any material submitted by a student at Dalhousie University may be checked for o
 
 
 
-17 FGS Conference Travel Grant Application Form and Guidelines (http://dalgrad.dal.ca/currentstudents/forms/ - travel).
-18 FGS Regulations, section 6.4 Policy on Intellectual Property (http://dalgrad.dal.ca/regulations/vi/ - 6.4).
+17 FGS Conference Travel Grant Application Form and Guidelines \elink{http://dalgrad.dal.ca/currentstudents/forms/ - travel}.
+18 FGS Regulations, section 6.4 Policy on Intellectual Property \elink{http://dalgrad.dal.ca/regulations/vi/ - 6.4}.
  
 
 been derived. Prior to submitting any paper in a course, or material for a thesis, students should read the Policy on Intellectual Honesty19.
@@ -584,6 +594,7 @@ been derived. Prior to submitting any paper in a course, or material for a thesi
 
 
 
-19 Policy on Intellectual Honesty (http://www.dal.ca/dept/university_secretariat/academic- integrity.html).
+19 Policy on Intellectual Honesty \elink{http://www.dal.ca/dept/university_secretariat/academic- integrity.html}.
  
 
+\end{document}
