update+check http links to line 160

--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -93,9 +93,9 @@ month prior to the beginning of each term will result in non- payment of
 scholarships and stipends.
 
 The \di{Course Registration Number} (\di{CRN}) for each term can be found in
-the Academic Timetable on the Registrar’s Office
-website\footnote{\href{https://dalonline.dal.ca/PROD/fysktime.P_DisplaySchedule}{Academic
-Timetable} as ``Registration Course--Graduate''.}.
+the Academic Timetable on the Registrar’s Office website\footnote{Academic
+Timetable for Oceanography
+\href{https://dalonline.dal.ca/PROD/fysktime.P_DisplaySchedule?s_term=201710,201720&s_subj=OCEA&s_district=100}{\ExternalLink}.}.
 
 %A1.2	THESIS CODE
 \subsection{Thesis Code}
@@ -141,11 +141,12 @@ within one month of the start of your program.
 
 Students must submit a Graduate Student Program Update Form to the Graduate
 Secretary when a decision to make changes to course requirements is
-made\footnote{Graduate Student Program Forms can be downloaded from the
-\href{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html}{FGS
-website}.}.  Failure to do so can result in the assessment of additional fees
-for courses not included in your program requirements, or affect the student’s
-ability to graduate.
+made\footnote{Graduate Student Program Forms can be downloaded from the FGS
+website
+\href{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html}{\ExternalLink}.}.
+Failure to do so can result in the assessment of additional fees for courses
+not included in your program requirements, or affect the student’s ability to
+graduate.
 
 In addition to the core classes as described above, there are several classes
 designed to provide students with the tools and background knowledge
@@ -156,7 +157,7 @@ in consultation with the thesis supervisor, with the approval of the advisory
 committee. Students must register for the 5000 level courses (4000 level is for
 undergraduates only) prior to the registration deadline\footnote{Course
 registration deadlines can be found in the Graduate Studies Academic Calendar
-\elink{http://www.dal.ca/academics/academic_calendars.html}.}.
+\href{http://www.dal.ca/academics/academic_calendars.html}{\ExternalLink}.}.
 
 %A2.3	GRADING
 \subsubsection{Grading}
